erDiagram
    users {
        int id PK
        string login UK
        string password_hash
        string name
        enum role
        timestamp created_at
    }

    vehicles {
        int id PK
        string brand
        string license_plate UK
        decimal max_weight
        decimal max_volume
    }

    products {
        int id PK
        string name
        decimal weight
        decimal length
        decimal width
        decimal height
    }

    deliveries {
        int id PK
        int courier_id FK
        int vehicle_id FK
        int created_by FK
        date delivery_date
        time time_start
        time time_end
        enum status
        timestamp created_at
        timestamp updated_at
    }

    delivery_points {
        int id PK
        int delivery_id FK
        int sequence
        decimal latitude
        decimal longitude
    }

    delivery_point_products {
        int id PK
        int delivery_point_id FK
        int product_id FK
        int quantity
    }

    users ||--o{ deliveries : "creates as manager"
    users ||--o{ deliveries : "assigned as courier"
    vehicles ||--o{ deliveries : "assigned to"
    deliveries ||--|{ delivery_points : "has"
    delivery_points ||--|{ delivery_point_products : "has products"
    products ||--o{ delivery_point_products : "delivered to points"
